# sam-bridge

./: Cargo.toml  LICENSE.md  README.md
app/flutter_application/rust/: Cargo.toml
app/flutter_application/rust/src/: adapters.rs  frb_generated.rs  infra.rs  lib.rs
app/flutter_application/rust/src/adapters/: api.rs  sam_site_facade.rs  view_models.rs
app/flutter_application/rust/src/infra/: retrieve_student_lessons.rs  retrieve_students.rs  sam_site_facade.rs
app_prototype/: Cargo.toml
lib/sam_integration/: Cargo.toml
lib/sam_integration/src/: features.rs  lib.rs
lib/sam_integration/src/features/: basic_sam_site_interop.rs
lib/sam_integration/src/features/basic_sam_site_interop/: infra.rs
lib/sam_integration/src/features/basic_sam_site_interop/adapters/: gateways.rs
lib/sam_integration/src/features/basic_sam_site_interop/infra/: lesson_parser.rs  sam_client.rs  sam_endpoints.rs  student_mapper.rs
lib/sam_site/: Cargo.toml
lib/sam_site/src/infrastructure/: sam_site_adapter.rs
lib/student_management/: Cargo.toml
lib/student_management/src/: domain.rs  features.rs  lib.rs
lib/student_management/src/domain/: entities.rs  gateway.rs  use_cases.rs
lib/student_management/src/features/authentication/adapters/: gateways.rs
lib/student_management/src/features/authentication/application/: use_cases.rs
lib/student_management/src/features/authentication/domain/: gateways.rs
lib/student_management/src/features/student_lessons/: application.rs
lib/student_management/src/features/student_lessons/adapters/: gateways.rs
lib/student_management/src/features/student_lessons/application/: use_cases.rs
lib/student_management/src/features/student_lessons/domain/: entities.rs  gateways.rs
lib/student_management/src/features/student_roster/adapters/: gateways.rs
lib/student_management/src/features/student_roster/application/: gateways.rs  use_cases.rs
lib/student_management/src/features/student_roster/domain/: gateways.rs
lib/student_management/src/shared/infra/: sam_site_adapter.rs
lib_sam_site/: Cargo.toml
(+28 files in other folders)
