[package]
name = "sam_site"
version = "0.1.0"
edition = "2024"

[dependencies]
student_management = { path = "../student_management" }
reqwest = { version = "0.13.4", features = ["form", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.4"
thiserror = "2.0.18"
