[package]
name = "sam_site"
version = "0.1.0"
edition = "2024"

[dependencies]
student_management = { path = "../student_management" }
reqwest = { version = "0.13.4", features = ["form", "cookies", "json"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.4"
scraper = "0.27.0"
