[package]
name = "student_management"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13.4", features = ["form", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.4"
scraper = "0.27.0"
