[package]
name = "rust_lib_flutter_application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
student_management = { path = "../../../lib/student_management" }
sam_integration = { path = "../../../lib/sam_integration" }
flutter_rust_bridge = "=2.13.0-beta.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
